--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-
+    <link href="https://fonts.googleapis.com/css?family=Changa|Roboto" rel="stylesheet">
     <title>XELORE</title>
     <link rel="shortcut icon" type="image/x-icon" href="statics/favicon.ico">
     <link type="text/css" rel="stylesheet" href="statics/firebaseui.css" />
